# TunnRL_TBM_maintenance

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODEOWNERS  Dockerfile  Dockerfile_standard  LICENSE  README.md  agent_comparison.py  derivation.docx  environment.yaml  main.py  maintenance_lib.py  make_folder_structure.sh  makefile  pyproject.toml  requirements.txt
example_input/: cutter_states.csv
install/: install_poetry.sh  install_pyenv.sh
results/: cutter_states.csv
scripts/: A_main_hydra.py  B_optimization_analyzer.py  C_training_path_analyzer.py  D_recommender.py
scripts/config/: __init__.py  main.yaml
scripts/config/REWARD/: experiment_1.yaml
scripts/config/agent/: a2c_best.yaml  ddpg_default.yaml  ppo-lstm_default.yaml  ppo_best.yaml  ppo_default.yaml  td3_best.yaml  td3_best_2.yaml  td3_best_7.yaml
src/: A_main.py  A_main_hydra.py  B_optimization_analyzer.py  C_action_analyzer.py  C_training_path_analyzer.py  D_recommender.py  D_training_path_analyzer.py  E_recommender.py  XX_TBM_environment.py  XX_callbacks.py  XX_config_schemas.py  XX_experiment_factory.py  XX_hyperparams.py  XX_maintenance_lib.py  XX_plotting.py  XX_utility.py  config.py
src/config/: figures_styles.mplstyle  main.yaml
src/config/agent/: a2c.yaml  ddpg_best.yaml  ddpg_default.yaml  ppo.yaml  ppo_best.yaml  ppo_default.yaml  sac.yaml  sac_best.yaml  td3.yaml  td3_best.yaml  td3_best_7.yaml
src/tunnrl_tbm_maintenance/: TBM_environment.py  config_schemas.py  experiment_factory.py  hyperparameters.py  plotting.py  train_optimize_execute.py  utility.py
src/utils/: XX_TBM_environment.py  XX_config_schemas.py  XX_experiment_factory.py  XX_general.py  XX_hyperparams.py  XX_plotting.py
tests/: __init__.py  test_TBM_environment.py  test_experiment_factory.py
