[tool.poetry]
name = "tunnrl_tbm_maintenance"
version = "0.1.0"
description = "Functionality to train, optimize and execute reinforcement learning models controlling the maintenance of cutter discs for a Tunnel Boring Machine (TBM). A simulated TBM environment is defined."
authors = ["Georg H. Erharter <erharter@tugraz.at>", "Tom F. Hansen <tom.frode.hansen@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TunnRL/TunnRL_TBM_maintenance"
packages = [
	{ include = "utils", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.10.5,<3.12"
stable-baselines3 = "^1.6.0"
sb3-contrib = "^1.6.0"
numpy = "^1.23.1"
optuna = "^2.10.1"
joblib = "^1.1.0"
scikit-learn = "^1.1.1"
mlflow = "^1.28.0"
tensorboard = "^2.10.0"
hydra-core = "^1.2.0"
plotly = "^5.10.0"
pydantic = "^1.10.0"
ipykernel = "^6.15.2"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
# setuptools = "<60"
isort = "^5.10.1"
flake8 = "^5.0.3"
flake8-annotations = "^2.9.1"
ipdb = "^0.13.9"
black = "^22.6.0"
pyupgrade = "^2.37.3"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ipdb]
context = 8

[tool.isort]
profile = "black"
known_first_party = "src"
force_single_line = false
lines_after_imports = 2

[tool.black]
line-length = 89
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.mypy]
strict = false
strict_optional = false
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]

# [tool.coverage.run]
# branch = true
# source = ["mwd_prediction_round"]

[tool.coverage.report]
show_missing = true
fail_under = 5 # coverage will fail if over xxx % of functions are covered
